Modification du code dans la partie 2

--- a/projet3_AlexFulbert.ipynb
+++ b/projet3_AlexFulbert.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -124,7 +124,7 @@
    "source": [
     "def df_names_fr():\n",
     "    \n",
-    "    df_pf = pd.read_csv('nat2021.csv', delimiter=\";\")\n",
+    "    df_pf = pd.read_csv('nat2021.csv', delimiter=\";\", keep_default_na=False)\n",
     "    df_pf = df_pf.rename(columns = {'sexe':'gender', 'preusuel': 'name', 'annais' : 'year', 'nombre' : 'births'}) \n",
     "    df_pf = df_pf[['year', 'name', 'gender', 'births']]\n",
     "    df_pf = df_pf[(df_pf['year'] != 'XXXX') & (df_pf['name'] != '_PRENOMS_RARES')]\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,13 +217,7 @@
     "        # colonnes\n",
     "        self.assertEqual(list(df.columns), [\"year\", \"name\", \"gender\", \"births\"])\n",
     "        # lignes\n",
-    "        \n",
-    "        # --------------- IMPORTANT -------------\n",
-    "        self.assertEqual(len(df), 648329)  # 648330 à 648329 car il y avait une valeur nulle parmis les 648330 \n",
-    "                                           # donc la suite des tests n'etaient pas réalisable, en particulier le dernier test\n",
-    "                                           # Je me permets donc de supposer \n",
-    "                                           # que vous n'aviez pas vu le NaN présent dans la colonne 'name' parmis les 648330\n",
-    "                                           \n",
+    "        self.assertEqual(len(df), 648330)  \n",
     "        # index\n",
     "        self.assertTrue(isinstance(df.index, pd.RangeIndex))\n",
     "        # test names\n",
@@ -250,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
@@ -277,7 +271,7 @@
       "test_df_taux_change (__main__.Session3Tests) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 5.269s\n",
+      "Ran 3 tests in 5.448s\n",
       "\n",
       "OK\n"
      ]
@@ -287,6 +281,13 @@
     "# run tests\n",
     "run_tests()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
