--- a/projet4_AlexFulbert.ipynb
+++ b/projet4_AlexFulbert.ipynb
@@ -15,8 +15,15 @@
    "source": [
     "# imports\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -44,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -83,6 +90,28 @@
     "\n",
     "    \n",
     "    return prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Personal': {'price': '$5', 'storage': '1GB', 'databases': 1},\n",
+       " 'Small Business': {'price': '$25', 'storage': '10GB', 'databases': 5},\n",
+       " 'Enterprise': {'price': '$45', 'storage': '100GB', 'databases': 25}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_prices_from_url(URL_PAGE2)"
    ]
   },
   {
@@ -148,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -197,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +294,7 @@
       "test_03_extract_beer_list_infos (__main__.Session4Tests) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 5.250s\n",
+      "Ran 3 tests in 1.379s\n",
       "\n",
       "OK\n"
      ]
